# hypertube

./: Makefile  README.md  docker-compose.yaml
app/: .dockerignore  Dockerfile  Makefile  pyproject.toml
app/src/: main.py
app/src/services/: stream.py
