[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery>=5.6.3",
    "django>=6.0.2",
    "django-cors-headers>=4.9.0",
    "django-debug-toolbar>=6.2.0",
    "djangorestframework>=3.16.1",
    "flask>=3.1.3",
    "psycopg2-binary>=2.9.11",
    "python-decouple==3.8",
]
